--- a/Case_Study/task2/src/app/contract/contract-create/contract-create.component.html
+++ b/Case_Study/task2/src/app/contract/contract-create/contract-create.component.html
@@ -12,133 +12,94 @@
   <div class="container-fluid">
     <div class="row">
       <h2>Add Contract</h2>
-      <table class="table" cellpadding="5">
-        <tr>
-          <th>SERVICE:</th>
-          <td>
-            <select class="form-select">
-              <option value="0">--CHOOSE SERVICE--</option>
-              <option value="1">ROOM SUITE SEA VIEW</option>
-              <option value="2">ROOM STUDIO SUITE SEA VIEW</option>
-              <option value="3">SUPERIOR ROOM WITH GARDEN VIEW</option>
-              <option value="4">GARDEN VIEW DELUXE ROOM</option>
-              <option value="5">GARDEN VIEW VILLA WITH PERSONAL POOL</option>
-              <option value="6">SEA VILLA WITH PERSONAL POOL</option>
-            </select>
-          </td>
-        </tr>
-        <tr>
-          <th>Customer:</th>
-          <td>
-            <select class="form-select">
-              <option value="0">--CHOOSE Customer--</option>
-              <option value="1">Phạm Thành Tri</option>
-              <option value="2">Thanh Tuyền</option>
-            </select>
-          </td>
-        </tr>
-        <tr>
-          <th>Ngày Làm Hợp Đồng:</th>
-          <td><input class="form-control" type="date"></td>
-        </tr>
-        <tr>
-          <th>Ngày Làm Kết Thúc Hợp Đồng:</th>
-          <td><input class="form-control" type="date"></td>
-        </tr>
-        <tr>
-          <th>Tiền Đặt Cọc:</th>
-          <td><input class="form-control" type="number"></td>
-        </tr>
-        <tr>
-          <th>Tổng Tiền:</th>
-          <td><input class="form-control" type="number"></td>
-        </tr>
-        <tr>
-          <th>Dịch Vụ Đi Kèm:</th>
-          <td>
-            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#attachPlus">
-              +
-            </button>
-            <div class="modal fade" id="attachPlus"
-                 data-bs-backdrop="static"
-                 data-bs-keyboard="false" tabindex="-1" aria-labelledby="addAttachFacilityLabel"
-                 aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header bg-primary">
-                    <h5 class="modal-title text-white" id="plus1Label">Thêm dịch vụ đi kèm</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                            aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body">
-                    <table class="table table-striped table-bordered">
-                      <tr>
-                        <td>Thuê xe đạp <input type="checkbox" class="form-check"></td>
-                        <td><input type="number" name="quantity" value="0" class="form-control">
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>Thuê xe máy <input type="checkbox" class="form-check"></td>
-                        <td><input type="number" name="quantity" value="0" class="form-control">
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>Karaoke <input type="checkbox" class="form-check"></td>
-                        <td><input type="number" name="quantity" value="0" class="form-control">
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>Buffet buổi sáng <input type="checkbox" class="form-check"></td>
-                        <td><input type="number" name="quantity" value="0" class="form-control">
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>Buffet buổi trưa <input type="checkbox" class="form-check"></td>
-                        <td><input type="number" name="quantity" value="0" class="form-control">
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>Buffet buổi tối <input type="checkbox" class="form-check"></td>
-                        <td><input type="number" name="quantity" value="0" class="form-control">
-                        </td>
-                      </tr>
-                    </table>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng
-                    </button>
-                    <button type="submit" class="btn btn-primary">Thêm</button>
-                  </div>
-                </div>
+      <form [formGroup]="contractForm" (ngSubmit)="submit()">
+        <table class="table" cellpadding="5">
+          <tr>
+            <th>SERVICE:</th>
+            <td>
+              <select class="form-select" formControlName="facilityName">
+                <option [ngValue]="null" disabled>--CHOOSE SERVICE--</option>
+                <option *ngFor="let item of facility" [ngValue]="item">{{item.name}}</option>
+              </select>
+              <div class="text-danger" *ngFor="let validation of validationMessage.facilityName">
+                <span
+                  *ngIf="contractForm.get('facilityName').hasError(validation.type) && contractForm.get('facilityName').touched">{{validation.message}}</span>
               </div>
+            </td>
+          </tr>
+          <tr>
+            <th>Customer:</th>
+            <td>
+              <select class="form-select" formControlName="customerName">
+                <option [ngValue]="null" disabled>--CHOOSE Customer--</option>
+                <option *ngFor="let item of customers" [ngValue]="item">{{item.name}}</option>
+              </select>
+              <div class="text-danger" *ngFor="let validation of validationMessage.customerName">
+                <span
+                  *ngIf="contractForm.get('customerName').hasError(validation.type) && contractForm.get('customerName').touched">{{validation.message}}</span>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <th>Contract Date:</th>
+            <td><input class="form-control" type="date" formControlName="startDay"></td>
+            <div class="text-danger" *ngFor="let validation of validationMessage.startDay">
+              <span
+                *ngIf="contractForm.get('startDay').hasError(validation.type) && contractForm.get('startDay').touched">{{validation.message}}</span>
             </div>
-          </td>
-        </tr>
+          </tr>
+          <tr>
+            <th>Contract End Date:</th>
+            <td><input class="form-control" type="date" formControlName="endDay"></td>
+            <div class="text-danger" *ngFor="let validation of validationMessage.endDay">
+              <span
+                *ngIf="contractForm.get('endDay').hasError(validation.type) && contractForm.get('endDay').touched">{{validation.message}}</span>
+            </div>
+          </tr>
+          <tr>
+            <th>Deposits:</th>
+            <td><input class="form-control" type="number" formControlName="deposits"></td>
+            <div class="text-danger" *ngFor="let validation of validationMessage.deposits">
+              <span
+                *ngIf="contractForm.get('deposits').hasError(validation.type) && contractForm.get('deposits').touched">{{validation.message}}</span>
+            </div>
+          </tr>
+          <tr>
+            <th>Total Pay:</th>
+            <td><input class="form-control" type="number" formControlName="totalPay"></td>
+            <div class="text-danger" *ngFor="let validation of validationMessage.totalPay">
+              <span
+                *ngIf="contractForm.get('totalPay').hasError(validation.type) && contractForm.get('totalPay').touched">{{validation.message}}</span>
+            </div>
+          </tr>
 
-        <td align="center">
-          <a routerLink="/contract">
-            <button type="button" class="btn btn-outline-primary">
-              Back
+          <td align="center">
+            <a routerLink="/contract">
+              <button type="button" class="btn btn-outline-primary">
+                Back
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                     class="bi bi-arrow-counterclockwise" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd"
+                        d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z"/>
+                  <path
+                    d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466z"/>
+                </svg>
+              </button>
+            </a>
+          </td>
+          <td align="left">
+            <button type="submit" class="btn btn-outline-primary">
+              Add
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                   class="bi bi-arrow-counterclockwise" viewBox="0 0 16 16">
-                <path fill-rule="evenodd"
-                      d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z"/>
-                <path d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466z"/>
+                   class="bi bi-plus-circle" viewBox="0 0 16 16">
+                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                <path
+                  d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
               </svg>
             </button>
-          </a>
-        </td>
-        <td align="left">
-          <button type="submit" class="btn btn-outline-primary">
-            Add
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                 class="bi bi-plus-circle" viewBox="0 0 16 16">
-              <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-              <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-            </svg>
-          </button>
-        </td>
-      </table>
+          </td>
+        </table>
+      </form>
     </div>
   </div>
 </div>
