--- a/Case_Study/task2/src/app/footer/footer.component.html
+++ b/Case_Study/task2/src/app/footer/footer.component.html
@@ -42,7 +42,7 @@
         <h4>Newsletter</h4>
         <p>You can trust us. we only send promo offers,</p>
         <div class="form-wrap" id="mc_embed_signup">
-          <form target="_blank"
+          <div target="_blank"
                 action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
                 method="get" class="form-inline">
             <input class="form-control" name="EMAIL" placeholder="Your Email Address" onfocus="this.placeholder = ''"
@@ -54,7 +54,7 @@
             </div>
 
             <div class="info"></div>
-          </form>
+          </div>
         </div>
       </div>
     </div>
