--- a/Case_Study/task2/src/app/customer/customer-edit/customer-edit.component.html
+++ b/Case_Study/task2/src/app/customer/customer-edit/customer-edit.component.html
@@ -11,7 +11,7 @@
   <div class="container-fluid">
     <div class="row">
       <h2>Edit Customer</h2>
-      <form [formGroup]="customerForm" (ngSubmit)="update(id)">
+      <form [formGroup]="customerForm" (ngSubmit)="submit()">
         <table class="table" cellpadding="5">
           <tr>
             <th>Id Customer:</th>
