--- a/Case_Study/task2/src/app/facility/facility-list/facility-list.component.html
+++ b/Case_Study/task2/src/app/facility/facility-list/facility-list.component.html
@@ -40,11 +40,11 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
-                    Confirm Delete {{nameDelete}}
+                    Confirm Delete {{name}}
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-danger" (click)="delete(idDelete)" data-bs-dismiss="modal" >Delete</button>
+                    <button type="button" class="btn btn-danger" (click)="delete()" data-bs-dismiss="modal" >Delete</button>
                   </div>
                 </div>
               </div>
@@ -54,7 +54,7 @@
             <a class="card-explore__link" [routerLink]="['/facility/edit',facility.id]">Edit<i class="ti-arrow-right"></i></a>
             <!-- Button trigger modal -->
             <button style="float: right" type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
-                    data-bs-target="#exampleModal1 " (click)="oppenDelete(facility)">
+                    data-bs-target="#exampleModal1 " (click)="oppenDelete(facility.id,facility.name)">
               Delete
             </button>
           </div>
