--- a/Case_Study/task2/src/app/customer/customer-list/customer-list.component.html
+++ b/Case_Study/task2/src/app/customer/customer-list/customer-list.component.html
@@ -15,6 +15,13 @@
     </a>
   </div>
 </div>
+<form [formGroup]="searchForm" *ngIf="searchForm" (ngSubmit)="search()">
+  <input class="input-search" type="text" placeholder="Search customer name"
+         formControlName="searchName" name="searchName">
+  <input class="input-search" type="text" placeholder="Search ID card"
+         formControlName="searchIdCard" name="searchIdCard">
+  <button class="btn-create scrollto" type="submit">Search</button>
+</form>
 <table class="table table-striped table-bordered" id="tableCustomer" style="swidth:100%">
   <thead>
   <tr class="table-success">
@@ -31,7 +38,7 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let customer of customer; index as i">
+  <tr *ngFor="let customer of customer | paginate: { itemsPerPage: 2, currentPage: p}; index as i">
     <td>{{i + 1}}</td>
     <td>{{customer.type.name}}</td>
     <td>{{customer.name}}</td>
@@ -46,7 +53,7 @@
     <td>
       <!-- Button trigger modal -->
       <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#exampleModal"
-      (click)="oppenDelete(customer)">
+              (click)="sendId(customer.id, customer.name)">
         Delete
       </button>
 
@@ -60,11 +67,11 @@
               <button type="button" class="btn-close"  aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              Do you want to delete client {{nameDelete}}
+              Do you want to delete client {{name}}
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" data-bs-dismiss="modal" class="btn btn-primary" (click)="delete(idDelete)">Delete</button>
+              <button type="button" data-bs-dismiss="modal" class="btn btn-primary" (click)="deleteCustomer()">Delete</button>
             </div>
           </div>
         </div>
@@ -73,7 +80,7 @@
   </tr>
   </tbody>
 </table>
-
+<pagination-controls class="float-right" (pageChange)="p = $event"></pagination-controls>
 <div>
   <nav class="blog-pagination justify-content-center d-flex">
     <ul class="pagination">
